[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "boreas"
version = "0.0.0"
description = ""
authors = ["Michal Jozwiak <mjozwiak@bink.com>"]
readme = "README.md"

[tool.poetry.scripts]
boreas = "boreas.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
kombu = "^5.3.3"
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.7.0"
tenacity = "^8.2.3"
httpx = "^0.25.1"
prometheus-client = "^0.18.0"
sentry-sdk = "^1.34.0"
click = "^8.1.7"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
mypy = "^1.6.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
xenon = "^0.9.1"

[tool.ruff]
select = ["ALL"]
ignore = ["ANN102", "D203", "D213","TCH001"]
line-length = 120
exclude = ["tests/*"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true

[tool.poetry-dynamic-versioning]
enable = false
