[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "boreas"
version = "0.0.0"
description = ""
authors = ["Michal Jozwiak <mjozwiak@bink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.109.1"
uvicorn = "^0.21.0"
pydantic = "^2.4.2"
kombu = "^5.3.4"
azure-identity = "^1.12.0"
azure-keyvault-secrets = "^4.6.0"
tenacity = "^8.2.2"
httpx = "^0.23.3"
prometheus-client = "^0.16.0"
sentry-sdk = { extras = ["fastapi"], version = "^1.34.0" }
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.1.5"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
# xenon = "^0.9.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.black]
line-length = 120

[tool.ruff]
select = ["I001"]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
